	PR c++/79566 - elaborated-type-specifier in range for

* parser.c (cp_parser_simple_declaration): Fix check for type
	definition.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@245591 138bc75d-0d04-0410-961f-82ee72b054a4